# cexarbot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/binance_client/: binance_client.rs  mod.rs
src/cexar_ai/: ai_client.rs  mod.rs
src/config/: secrets.rs
